--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,15 +21,15 @@ jobs:
         run: swift test --enable-code-coverage -v
       
       - name: Setup Xcode
-        uses: maxim-lobanov/setup-xcode@v1.4.0
+        uses: maxim-lobanov/setup-xcode@v1.5.0
         with:
-          xcode-version: "13.1"
+          xcode-version: latest
 
       - name: Gather code coverage
         run: xcrun llvm-cov export -format="lcov" .build/debug/DXProtocolPackageTests.xctest/Contents/MacOS/GACalcPackageTests -instr-profile .build/debug/codecov/default.profdata > coverage_report.lcov
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2
+        uses: codecov/codecov-action@v3.1.4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: true
