--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,12 @@ jobs:
     steps:
       - name: Get Sources
         uses: actions/checkout@v2
-
+        
+      - name: Setup Swift
+        uses: swift-actions/setup-swift@v1.24.0
+        with:
+              swift-version: "5.8.0"
+    
       - name: Build Package
         run: swift build -v
 
@@ -21,7 +26,7 @@ jobs:
         run: swift test --enable-code-coverage -v
       
       - name: Setup Xcode
-        uses: maxim-lobanov/setup-xcode@v1.5.0
+        uses: maxim-lobanov/setup-xcode@v1.5.1
         with:
           xcode-version: latest
 
