--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,20 +23,13 @@ jobs:
         run: swift build -v
 
       - name: Run tests
-        run: swift test --enable-code-coverage -v
-      
-      - name: Setup Xcode
-        uses: maxim-lobanov/setup-xcode@v1.5.1
-        with:
-          xcode-version: latest
-
-      - name: Gather code coverage
-        run: xcrun llvm-cov export -format="lcov" .build/debug/DXProtocolPackageTests.xctest/Contents/MacOS/DXProtocolPackageTests -instr-profile .build/debug/codecov/default.profdata > coverage_report.lcov
+        run: swift test --enable-code-coverage
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3.1.4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./.build/debug/codecov/DXProtocol.json
+          flags: unittests
+          name: codecov-umbrella
           fail_ci_if_error: true
-          files: ./coverage_report.lcov
-          verbose: true
