--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,16 +20,7 @@ jobs:
               swift-version: "5.8.0"
     
       - name: Build Package
-        run: swift build -v
+        run: swift build
 
       - name: Run tests
         run: swift test --enable-code-coverage
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3.1.4
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./.build/debug/codecov/DXProtocol.json
-          flags: unittests
-          name: codecov-umbrella
-          fail_ci_if_error: true
