--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
               swift-version: "5.8.0"
     
       - name: Build Package
-        run: swift build
+        run: swift build --build-tests
 
       - name: Run tests
-        run: swift test -v --enable-code-coverage
+        run: swift test --enable-code-coverage
