--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,5 +19,8 @@ jobs:
         with:
               swift-version: "5.8.0"
 
+      - name: Build
+        run: swift build
+        
       - name: Run tests
-        run: swift test --enable-code-coverage
+        run: swift test
