--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,16 +21,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        xcode: ['15.0', '15.0.1']
-        macos: ['macos-14', 'macos-13']
+        xcode: ['15.0.1']
+        macos: ['macos-14']
         scheme: ['DXProtocol']
         command: ['test']
         platform: ['macOS', 'iOS', 'mac-catalyst']
-        exclude:
-          - macos: 'macos-13'
-            xcode: '15.0'
-          - macos: 'macos-13'
-            xcode: '15.0.1'
     steps:
     - name: Switch xcode to ${{ matrix.xcode }}
       uses: maxim-lobanov/setup-xcode@v1.2.3
