--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
       fail-fast: false
       matrix:
         xcode: ['15.0.1']
-        macos: ['macos-latest']
+        macos: ['14.0']
         scheme: ['DXProtocol']
         command: ['test']
         platform: ['macOS', 'iOS', 'mac-catalyst']
