--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        xcode: ['15.0-beta']
-        macos: ['macos-13']
+        xcode: ['14.3']
+        macos: ['macos-latest']
         scheme: ['DXProtocol']
         command: ['test']
         platform: ['macOS', 'iOS', 'mac-catalyst']
