--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,47 +5,32 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:
-
-# https://stackoverflow.com/a/72408109/6942800
-concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
-  cancel-in-progress: true
+    
+env:
+  SCHEME: DXProtocol
+  TEST_DEVICE: platform=iOS Simulator,name=iPhone 14,OS=16.2
 
 jobs:
-  build_and_test:
-    name: ${{ matrix.command }} on  ${{ matrix.platform }} (xcode ${{ matrix.xcode }}, ${{ matrix.macos }})
-    runs-on: ${{ matrix.macos }} 
-    strategy:
-      fail-fast: false
-      matrix:
-        xcode: ['14.2']
-        macos: ['macos-latest']
-        scheme: ['DXProtocol']
-        command: ['test']
-        platform: ['macOS', 'iOS', 'mac-catalyst']
+  build:
+    runs-on: macos-latest
+    timeout-minutes: 30
+
     steps:
-    - name: Switch xcode to ${{ matrix.xcode }}
-      uses: maxim-lobanov/setup-xcode@v1.2.3
-      with:
-        xcode-version: ${{ matrix.xcode }}
-    - name: Double-check macOS version (${{ matrix.macos }})
-      run: sw_vers
-    - name: Code Checkout
-      uses: actions/checkout@v2
-    - name: Check xcodebuild version
-      run: xcodebuild -version
-    - name: Check xcode embedded SDKs
-      run: xcodebuild -showsdks
-    - name: Show buildable schemes
-      run: xcodebuild -list
-    - name: Show eligible build destinations for ${{ matrix.scheme }}
-      run: xcodebuild -showdestinations -scheme ${{ matrix.scheme }}
-    - uses: mxcl/xcodebuild@v1.9.2
-      with:
-        platform: ${{ matrix.platform }}
-        scheme: ${{ matrix.scheme }}
-        action: ${{ matrix.command }} 
-        code-coverage: true
-        verbosity: xcpretty
-        upload-logs: always
+    - name: Checkout project repo
+      uses: actions/checkout@v4
+
+    - name: Build
+      shell: bash
+      run: xcodebuild -scheme '${{ env.SCHEME }}' -sdk iphonesimulator -destination '${{ env.TEST_DEVICE }}' build
+
+  test:
+    runs-on: macos-latest
+    timeout-minutes: 30
+
+    steps:
+    - name: Checkout project repo
+      uses: actions/checkout@v4
+
+    - name: Test
+      shell: bash
+      run: xcodebuild -scheme '${{ env.SCHEME }}' -sdk iphonesimulator -destination '${{ env.TEST_DEVICE }}' test
