--- a/.github/workflows/docc.yml
+++ b/.github/workflows/docc.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Build DocC
         run: |
-          xcodebuild docbuild -scheme RealityUI -derivedDataPath /tmp/docbuild -destination 'generic/platform=iOS';
+          xcodebuild docbuild -scheme DXProtocol -derivedDataPath /tmp/docbuild -destination 'generic/platform=iOS';
           $(xcrun --find docc) process-archive \
             transform-for-static-hosting /tmp/docbuild/Build/Products/Debug-iphoneos/DXProtocol.doccarchive \
             --hosting-base-path DXProtocol \
