--- a/.github/workflows/docc.yml
+++ b/.github/workflows/docc.yml
@@ -1,4 +1,3 @@
-# Simple workflow for deploying static content to GitHub Pages
 name: Deploy DocC
 
 on:
@@ -18,28 +17,28 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: macos-latest
+    runs-on: macos-12
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v4
-      - name: Build DocC
+        uses: actions/checkout@v3
+      - name: Build All DocC 🛠
         run: |
           xcodebuild docbuild -scheme DXProtocol -derivedDataPath /tmp/docbuild -destination 'generic/platform=iOS';
           $(xcrun --find docc) process-archive \
             transform-for-static-hosting /tmp/docbuild/Build/Products/Debug-iphoneos/DXProtocol.doccarchive \
-            --hosting-base-path DXProtocol \
-            --output-path docs;
-          echo "<script>window.location.href += \"/documentation/dxprotocol\"</script>" > docs/index.html
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+            --output-path docs \
+            --hosting-base-path DXProtocol;
+          echo "<script>window.location.href += \"/documentation/dxprotocol\"</script>" > docs/index.html;
+
+      - name: Upload artifact 📜
+        uses: actions/upload-pages-artifact@v1
         with:
           # Upload docs directory
           path: 'docs'
-      - name: Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages 🐙
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v1
