--- a/.github/workflows/docc.yml
+++ b/.github/workflows/docc.yml
@@ -21,7 +21,7 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: macos-latest
+    runs-on: macos-13
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
